--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,22 @@
 <head>
+    {% include google-analytics.html %}
     <meta charset="utf-8">
-    <title>{{ site.title }}</title>
-    <meta name="description" content="{{ site.description }}">
-    <meta name="author" content="www.revovision.ca">
+    <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
+    <meta name="description" content="{% if page.title != undefined %}{{ page.description | escape }}{% else %}{{ site.meta_description | escape }}{% endif %}">
+    <link rel="canonical" href="{{ site.production_url }}{{ page.url | replace:'index.html',''}}">
+    {% if page.description %}
+        <meta name="description" content="{{ page.description | escape }}">
+    {% else %}
+          <meta name="description" content="{{ site.meta_description | escape }}">
+    {% endif %}
+    <meta name="author" content="Revovision Inc.">
+
 
     <!-- Mobile Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicon -->
-    <link href="/images/favicon.ico">
+    <link rel="shortcut icon" href="/images/favicon.ico">
 
     <!-- Web Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,500,500italic,700,700italic' rel='stylesheet' type='text/css'>
