--- a/_includes/produits.html
+++ b/_includes/produits.html
@@ -21,8 +21,13 @@
 							<div class="col-md-4 col-sm-6 masonry-grid-item">
 								<div class="listing-item white-bg bordered mb-20">
 									<div class="overlay-container">
-										<img src="{{ bien.image}}" alt="" style="width: 400px; height: 200px;">
-										<a class="overlay-link popup-img-single" href="{{ bien.image}}"><i class="fa fa-search-plus"></i></a>
+										{% if bien.image != empty %}
+						                    <img src="{{ bien.image}}" alt="{{ bien.title }}" style="width: 400px; height: 200px;">
+						                    <a class="overlay-link popup-img-single" href="{{ bien.image}}"><i class="fa fa-search-plus"></i></a>
+						                  {% else %}
+						                    <img src="/images/image_not_found.jpg" alt="image_not_found" style="width: 400px; height: 200px;">
+						                    <a class="overlay-link popup-img-single" href="/images/image_not_found.jpg"><i class="fa fa-search-plus"></i></a>
+						                  {% endif %}
 										{% if bien.situation == 'Loué' %}
 					                      <span class="btn btn-warning btn-lg badge">Déja Loué</span>
 					                    {% endif %}
@@ -61,8 +66,13 @@
 							<div class="col-md-4 col-sm-6 masonry-grid-item">
 								<div class="listing-item white-bg bordered mb-20">
 									<div class="overlay-container">
-										<img src="{{ bien.image}}" alt="" style="width: 400px; height: 200px;">
-										<a class="overlay-link popup-img-single" href="{{ bien.image}}"><i class="fa fa-search-plus"></i></a>
+										{% if bien.image != empty %}
+						                    <img src="{{ bien.image}}" alt="{{ bien.title }}" style="width: 400px; height: 200px;">
+						                    <a class="overlay-link popup-img-single" href="{{ bien.image}}"><i class="fa fa-search-plus"></i></a>
+						                  {% else %}
+						                    <img src="/images/image_not_found.jpg" alt="image_not_found" style="width: 400px; height: 200px;">
+						                    <a class="overlay-link popup-img-single" href="/images/image_not_found.jpg"><i class="fa fa-search-plus"></i></a>
+						                  {% endif %}
 										{% if bien.situation == 'Loué' %}
 					                      <span class="btn btn-warning btn-lg badge">Déja Loué</span>
 					                    {% endif %}
@@ -101,8 +111,13 @@
 							<div class="col-md-4 col-sm-6 masonry-grid-item">
 								<div class="listing-item white-bg bordered mb-20">
 									<div class="overlay-container">
-										<img src="{{ bien.image}}" alt="" style="width: 400px; height: 200px;">
-										<a class="overlay-link popup-img-single" href="{{ bien.image}}"><i class="fa fa-search-plus"></i></a>
+										{% if bien.image != empty %}
+						                    <img src="{{ bien.image}}" alt="{{ bien.title }}" style="width: 400px; height: 200px;">
+						                    <a class="overlay-link popup-img-single" href="{{ bien.image}}"><i class="fa fa-search-plus"></i></a>
+						                  {% else %}
+						                    <img src="/images/image_not_found.jpg" alt="image_not_found" style="width: 400px; height: 200px;">
+						                    <a class="overlay-link popup-img-single" href="/images/image_not_found.jpg"><i class="fa fa-search-plus"></i></a>
+						                  {% endif %}
 										{% if bien.situation == 'Loué' %}
 					                      <span class="btn btn-warning btn-lg badge">Déja Loué</span>
 					                    {% endif %}
