front end homepage: slider, service, paralax, style.css

--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -29,18 +29,18 @@
 									</div>
 
 									<!-- LAYER NR. 1 -->
-									<div class="tp-caption sfb fadeout large_white"
+									<div class="tp-caption sfb fadeout xlarge_white"
 										data-x="left"
 										data-y="80"
 										data-speed="500"
 										data-start="1000"
-										data-easing="easeOutQuad"><b>{{ slider.content}}</b>
+										data-easing="easeOutQuad">{{ slider.content}}
 									</div>	
 
 									<!-- LAYER NR. 2 -->
 									<div class="tp-caption sfb fadeout large_white tp-resizeme hidden-xs"
 										data-x="left"
-										data-y="200"
+										data-y="190"
 										data-speed="500"
 										data-start="1300"
 										data-easing="easeOutQuad"><div class="separator-2 light"></div>
@@ -49,11 +49,11 @@
 									<!-- LAYER NR. 3 -->
 									<div class="tp-caption sfb fadeout medium_white hidden-xs"
 										data-x="left"
-										data-y="220"
+										data-y="210"
 										data-speed="500"
 										data-start="1300"
 										data-easing="easeOutQuad"
-										data-endspeed="600"><b>{{ slider.text}}</b>
+										data-endspeed="600">{{ slider.text}}
 									</div>
 
 									</li>
