--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,9 +30,13 @@
 			{% include produits.html %}
 			
 
+			
+			<div class="clearfix visible-md"></div>
+			{% include services.html %}
+
 			<!-- section start -->
-			<!-- ================ -->
-			<section class="section dark-translucent-bg" style="background-image:url('{{ site.parallax }}');background-position: 50% 32%;">
+			<!-- ================ --
+			<section class="section">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
@@ -52,11 +56,9 @@
 				</div>
 			</section>
 			<!-- section end -->
-			<div class="clearfix visible-md"></div>
-			{% include services.html %}
 
 			<!-- section start -->
-			<!-- ================ -->
+			<!-- ================ --
 			<section class="section dark-translucent-bg pv-40" style="background-image:url('{{ site.parallax }}');background-position: 50% 32%;">
 				<div class="container">
 					<div class="row grid-space-10">
@@ -95,7 +97,7 @@
 			</section>
 			<!-- section end -->
 			
-			{% include footer.html%}
+			{% include footer.html %}
 
 	</body>
 </html>
