--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,20 +1,39 @@
-<!-- section -->
-<!-- ================ -->
-<section class="light-gray-bg pv-30 padding-bottom-clear clearfix">
+
+<section class="pv-30 parallax dark-translucent-bg background-img-services padding-bottom-clear">
+	<br>
 	<div class="container">
 		<div class="row">
-		{% for service in site.services %}
-			<div class="col-md-6 ">
-				<div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-					<span class="icon default-bg circle"><i class="fa fa-diamond"></i></span>
-					<h3>{{ service.title }}</h3>
+		{% for service in site.services limit:3 %}
+			<div class="col-md-4 ">
+				<div class="ph-20 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+					<span class="icon light-bg circle"><i class="fa fa-diamond"></i></span>
+					<h1 class="large">{{ service.title }}</h1>
 					<div class="separator clearfix"></div>
-					<p>{{ service.content }}</p>
+					<!--<p>{{ service.content }}</p>-->
+					
 				</div>
 			</div>
 		{% endfor %}
 		</div>
-		
 	</div>
+	<br>
 </section>
-<!-- section end -->
+<section class="parallax dark-translucent-bg background-img-services padding-bottom-clear">
+	<br>
+	<div class="container">
+		<div class="row">
+		{% for service in site.services limit:3 offset:3 %}
+			<div class="col-md-4 ">
+				<div class="ph-20 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+					<span class="icon light-bg circle"><i class="fa fa-diamond"></i></span>
+					<h1 class="large">{{ service.title }}</h1>
+					
+					<!--<p>{{ service.content }}</p>-->
+					
+				</div>
+			</div>
+		{% endfor %}
+		</div>
+	</div>
+	<br>
+</section>
