--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
               <div class="row">
                 <div class="col-md-8">
                   <div class="footer-content">
-                    <div class="logo-footer"><img id="logo_img" src="{{ site.logo }}" alt="SMBS_LOGO" style="width: 200px; height: 70px;"></div>
+                    <div class="logo-footer"><img id="logo_img" src="{{ site.logo }}" alt="Independance Immobiliere" style="width: auto; height: 70px;"></div>
                     <div class="row">
                       <div class="col-md-6">
                         <p class="text-justify"><br/>{{ site.orientation }}</p>
